Add Price calculation support to jfPurchase

--- a/MyLibrary/src/ui/jfPurchase/JFPurchase.form
+++ b/MyLibrary/src/ui/jfPurchase/JFPurchase.form
@@ -429,7 +429,7 @@
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                      <Component id="jLabel25" pref="86" max="32767" attributes="0"/>
+                                                      <Component id="labelTotalVAT" pref="86" max="32767" attributes="0"/>
                                                       <Component id="labelPriceHT" max="32767" attributes="0"/>
                                                   </Group>
                                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -445,8 +445,8 @@
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                                      <Component id="jLabel29" pref="86" max="32767" attributes="0"/>
-                                                      <Component id="jLabel27" max="32767" attributes="0"/>
+                                                      <Component id="labelTotalOrderTTC" pref="86" max="32767" attributes="0"/>
+                                                      <Component id="labelShippingCost" max="32767" attributes="0"/>
                                                   </Group>
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Group type="102" attributes="0">
@@ -486,8 +486,8 @@
                               <Component id="comboStatus" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jScrollPane2" min="-2" pref="188" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="jScrollPane2" min="-2" pref="200" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel34" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="labelPriceHT" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -498,13 +498,13 @@
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel36" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel25" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelTotalVAT" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel26" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel27" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelShippingCost" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel28" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -514,7 +514,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel35" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabel29" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="labelTotalOrderTTC" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel30" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="14" max="32767" attributes="0"/>
@@ -536,10 +536,10 @@
                           <Table columnCount="7" rowCount="10">
                             <Column editable="false" title="ISBN" type="java.lang.Object"/>
                             <Column editable="false" title="Titre" type="java.lang.String"/>
-                            <Column editable="false" title="Prix unitaire HT" type="java.lang.Float"/>
                             <Column editable="false" title="Quantit&#xe9;" type="java.lang.Integer"/>
-                            <Column editable="false" title="Prix H.T" type="java.lang.Float"/>
+                            <Column editable="false" title="Prix unitaire HT" type="java.lang.Float"/>
                             <Column editable="false" title="T.V.A" type="java.lang.Float"/>
+                            <Column editable="false" title="Prix H.T" type="java.lang.Float"/>
                             <Column editable="false" title="Prix T.T.C" type="java.lang.Float"/>
                           </Table>
                         </Property>
@@ -680,7 +680,7 @@
                     <Property name="text" type="java.lang.String" value="&#x20ac;"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel25">
+                <Component class="javax.swing.JLabel" name="labelTotalVAT">
                   <Properties>
                     <Property name="horizontalAlignment" type="int" value="4"/>
                     <Property name="text" type="java.lang.String" value="888,88"/>
@@ -692,7 +692,7 @@
                     <Property name="text" type="java.lang.String" value="&#x20ac;"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel27">
+                <Component class="javax.swing.JLabel" name="labelShippingCost">
                   <Properties>
                     <Property name="horizontalAlignment" type="int" value="4"/>
                     <Property name="text" type="java.lang.String" value="888,88"/>
@@ -704,7 +704,7 @@
                     <Property name="text" type="java.lang.String" value="&#x20ac;"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel29">
+                <Component class="javax.swing.JLabel" name="labelTotalOrderTTC">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="sansserif" size="12" style="1"/>
