--- a/MyLibrary/src/PanelAModifier/ThemeDelete.form
+++ b/MyLibrary/src/PanelAModifier/ThemeDelete.form
@@ -41,7 +41,7 @@
               <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel1" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
-                  <Component id="jComboBox1" alignment="3" max="32767" attributes="0"/>
+                  <Component id="jComboBox1" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
               <Component id="jButton4" min="-2" pref="39" max="-2" attributes="0"/>
